--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           
   <main id="main">
     <h1>Home</h1>
-    <p><a href="https://zy6lc.com/">Welcome!</a></p>
+    <p><a href="https://zy6lc.com/about/">Welcome!</a></p>
 
   </main>
 
@@ -225,7 +225,7 @@
     </label>
   </div>
   
-    Made with <a href="https://gohugo.io/">Hugo</a>. Themed by <a href="https://github.com/zwbetz-gh/cupper-hugo-theme">Cupper</a>.
+    Themed by <a href="https://github.com/zwbetz-gh/cupper-hugo-theme">Cupper</a>.
   
 </footer>
 
