--- a/about/index.html
+++ b/about/index.html
@@ -221,7 +221,7 @@
     </label>
   </div>
   
-    Made with <a href="https://gohugo.io/">Hugo</a>. Themed by <a href="https://github.com/zwbetz-gh/cupper-hugo-theme">Cupper</a>.
+    Themed by <a href="https://github.com/zwbetz-gh/cupper-hugo-theme">Cupper</a>.
   
 </footer>
 
