添加邮箱地址

--- a/about/index.html
+++ b/about/index.html
@@ -209,7 +209,7 @@
           
   <main id="main">
     <h1>About</h1>
-    <p>I am <a href="https://zy6lc.com/">here!</a></p>
+    <p>email: <a href="mailto:zy6hot@hotmail.com">zy6hot@hotmail.com</a></p>
 
   </main>
 
