修复图片不显示

--- a/双数组trie树/index.html
+++ b/双数组trie树/index.html
@@ -731,7 +731,7 @@
 </tbody>
 </table>
 <p>添加完之后的trie树是长这个样子的（由于markdown树形图问题，所以给了‘三’下标，表示第一个和第二个）：</p>
-<p><img src="https://github.com/threfo/bello_kg/blob/master/pipelines.png" alt="trie"></p>
+<p><img src="/images/pic1.jpg" alt="trie"></p>
 <p>假设已经添加完‘三天三夜’后，在添加‘三天两头’时，我们跳过公共前缀‘三’和‘天’（为了方便理解），直接从‘两’开始。</p>
 <table>
 <thead>
