--- a/perceptron/index.html
+++ b/perceptron/index.html
@@ -268,6 +268,8 @@
 
 <h2 id="代码实现">代码实现</h2>
 
+<p>所有代码在<a href="https://github.com/zy6lc/bigfish">github</a></p>
+
 <h3 id="数据准备">数据准备</h3>
 
 <p>用mnist数据中的0和1作为本次试验数据，把这些数据变成矩阵，假装模拟力气的大小。
